competition table navbar functions, modified it to be similar to be figma version, added icons for clubs, fixed login & signup responsiveness problem on mobile

--- a/Solution/Main/public/stylesheets/competition-table.css
+++ b/Solution/Main/public/stylesheets/competition-table.css
@@ -26,7 +26,7 @@ body {
     text-align: center;
 }
 .nav-bar button.active {
-    border-bottom: 2px solid #1d9bf0;
+    border-bottom: 3px solid #10C726;
 }
 .nav-bar select {
     background-color: #444;
@@ -43,6 +43,7 @@ body {
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
+    margin-left: auto !important;
 }
 
 #dateSelect {
@@ -113,11 +114,13 @@ body {
     color: #FFFFFF;
     text-align: center;
     vertical-align: middle;
+    font-weight: normal;
 }
 .table tbody td {
     background-color: #323741;
     color: #FFFFFF;
     border: 0.5px solid #252a33;
+    text-align: center;
 }
 
 .table tbody td a {
@@ -132,5 +135,24 @@ body {
     padding: 0;
 }
 
+.table.table-dark {
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
+}
 
+.club-wrapper {
+    display: flex;
+    align-items: center;
+}
 
+.club_logo {
+    margin-right: 8px;
+}
+
+#pagination {
+    background-color: #272a32;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+}
