--- a/Solution/Main/public/stylesheets/login.css
+++ b/Solution/Main/public/stylesheets/login.css
@@ -14,7 +14,7 @@
 
 .box-login {
     min-height: 80vh;
-    min-width: 85vh;
+    min-width: 40%;
 }
 
 .leftArrow{
